--- a/node-web-server/package.json
+++ b/node-web-server/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "bbs": "0.0.0",
+    "express": "^4.16.3",
+    "hbs": "^4.0.1"
   }
 }
