--- a/node-todo-api/package.json
+++ b/node-todo-api/package.json
@@ -4,14 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec 'npm test'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
+    "lodash": "^4.17.10",
     "mongodb": "^2.2.5",
-    "mongoose": "^5.1.2"
+    "mongoose": "^5.1.2",
+    "validator": "^10.2.0"
+  },
+  "devDependencies": {
+    "expect": "^23.0.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.17.5",
+    "supertest": "^3.1.0"
   }
 }
